# rust-c-ffi-example-with-cmake

./: .gitignore  CMakeLists.txt  LICENSES  README.md
c_app/: CMakeLists.txt
c_app/src/: main.c
c_lib/: CMakeLists.txt
c_lib/inc/: c_lib.h
c_lib/src/: c_lib.c
rust_lib/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs.in  wrapper.h
rust_lib/src/: bindings.rs  lib.rs
